fix: optimize results listing on mobile #20

--- a/style.css
+++ b/style.css
@@ -486,6 +486,41 @@ h1.entry-title {
     .single .nv-content-wrap.entry-content h3 {
         font-size: 18px;
     }
+    /*results listings*/
+    #domainwheel_generator_root {
+        padding: 0;
+    }
+    .ant-list-grid .ant-col > .ant-list-item {
+        margin-bottom: 8px !important;
+    }
+    #domainwheel_generator_root .ant-alert-icon {
+        left: 7px !important;
+    }
+    #domainwheel_generator_root .ant-alert {
+        padding-left: 27px;
+    }
+    #domainwheel_generator_root .ant-alert-message strong {
+        font-size: 13px;
+    }
+    #domainwheel_generator_root .ant-alert-message button {
+        padding: 0 10px;
+    }
+    #domainwheel_generator_root .ant-card-body {
+        padding: 10px;
+    }
+    #domainwheel_generator_root .ant-card-body button {
+        margin: 5px 0 !important; 
+    }
+    #domainwheel_generator_root .ant-card-body button span {
+        font-size: 13px;
+        font-weight: 600;
+    }
+    #domainwheel_generator_root .ant-card-head-title {
+        padding: 10px 0 !important;
+    }
+    #domainwheel_generator_root .ant-card-head {
+        min-height: 0 !important;
+    }
 }
 
 @media (max-width: 360px) {
